<resources>
    <string name="app_name">Lab2</string>
    <string name="Title">中山大学学生信息管理系统</string>
    <string name="string_id">学号:</string>
    <string name="please_id">请输入学号</string>
    <string name="please_password">请输入密码</string>
    <string name="string_password">密码:</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="upload_image">上传头像</string>
    <string name="take_photo">拍摄</string>
    <string name="choose_pic">从相册选择</string>
    <string name="mode_takephoto">您选择了[拍摄]</string>
    <string name="mode_choosepic">您选择了[从相册选择]</string>
    <string name="cancel">取消</string>
    <string name="mode_cancel">您选择了[取消]</string>
    <string name="mode_student">您选择了学生</string>
    <string name="commit">确定</string>
    <string name="mode_teacher">您选择了教职工</string>
    <string name="id_error">学号不能为空</string>
    <string name="correct_id">123456</string>
    <string name="pw_error">密码不能为空</string>
    <string name="correct_pw">6666</string>
    <string name="id_or_pw_error">学号或密码错误</string>
    <string name="succeed">登陆成功</string>
    <string name="reg_stu">学生注册功能尚未开启</string>
    <string name="reg_teacher">教职工注册功能尚未开启</string>
</resources>
